responsive (wrap)fixed

--- a/FRONT-END-1/Cat-and-dog/StyleSheet/Style.css
+++ b/FRONT-END-1/Cat-and-dog/StyleSheet/Style.css
@@ -1,15 +1,18 @@
 *{
     padding: 0%;
     margin:0%;
+    box-sizing: border-box;
 }
 
 
 .cabecera{
+    width: 100%;
     height: 20px;
     background-color: black;
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0% 3% 0%;
     gap: 400px;
 }
 .adds{
@@ -21,6 +24,7 @@
 }
 
 .nav-Bar{
+    width: auto;
     height: 62px;
     background-color:#F0A83E ;
     display: flex;
@@ -114,10 +118,11 @@
 
 .productos{
     
-    margin: 0px 50px 0px;
+    padding: 0px 50px 0px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 100px;
+    gap: 10%;
 
 }
 
@@ -179,8 +184,9 @@
 
 
 .sub-Banner{
-    height: 60px;
+    height: 80px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 0px 30px 0px;
     background-color: #F0A83E;
